WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203207
JSON.parse has bad is array assert
https://bugs.webkit.org/show_bug.cgi?id=203207
Summary
JSON.parse has bad is array assert
Saam Barati
Reported
2019-10-21 13:19:51 PDT
...
Attachments
patch
(3.32 KB, patch)
2019-10-21 13:29 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-10-21 13:20:52 PDT
<
rdar://problem/56366913
>
Saam Barati
Comment 2
2019-10-21 13:29:52 PDT
Created
attachment 381437
[details]
patch
Yusuke Suzuki
Comment 3
2019-10-21 13:37:02 PDT
Comment on
attachment 381437
[details]
patch r=me
WebKit Commit Bot
Comment 4
2019-10-21 16:22:53 PDT
The commit-queue encountered the following flaky tests while processing
attachment 381437
[details]
: imported/w3c/web-platform-tests/IndexedDB/interleaved-cursors-large.html
bug 201849
svg/wicd/rightsizing-grid.xhtml
bug 203222
(author:
zimmermann@kde.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2019-10-21 16:23:45 PDT
Comment on
attachment 381437
[details]
patch Clearing flags on attachment: 381437 Committed
r251394
: <
https://trac.webkit.org/changeset/251394
>
WebKit Commit Bot
Comment 6
2019-10-21 16:23:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug